--- a/components/catalog-info.yaml
+++ b/components/catalog-info.yaml
@@ -1,9 +1,9 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: my-example-service
+  name: my-daven-service
   description: |
-    My Example service which has something to do with APIs and database.
+    My Example service for our lab
   links:
     - title: Website
       url: http://harness.io
@@ -18,7 +18,7 @@ metadata:
 #  labels:
 #    key1: value1
   tags:
-    - yournamehere
+    - daven
 spec:
   type: service
   owner: change-value
