--- a/components/catalog-info-dependent.yaml
+++ b/components/catalog-info-dependent.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: my-example-service-2
+  name: my-daven-service-2
   description: |
     My Example service which has something to do with APIs and database.
   links:
@@ -21,11 +21,11 @@ metadata:
     - yournamehere
 spec:
   type: service
-  owner: change-value
+  owner: daven
   lifecycle: experimental
 #  system: Demo
-#  dependsOn:
-#    - component:default/fill-in-your-name-service
+  dependsOn:
+    - component:default/my-daven-service
 #  consumesApis:
 #    - user-api
 #  providesApis:
